| Summary: | ASTERISK-27943: AMI: Action SendText needs to use the correct thread. | ||||||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |||||
| Date Opened: | 2018-06-25 15:11:36 | Date Closed: | 2018-06-30 12:04:35 | ||||
| Priority: | Major | Regression? | No | ||||
| Status: | Closed/Complete | Components: | Core/ManagerInterface | ||||
| Versions: | 13.21.1 GIT 15.4.1 | Frequency of Occurrence | Constant | ||||
| Related Issues: | 
 | ||||||
| Environment: | Attachments: | ||||||
| Description: | The fix for ASTERISK-27625 points out the AMI action SendText is using the wrong thread to send the text and will now trigger an assertion in developer's mode. {noformat} Action: SendText Channel: PJSIP/100 Message: Watson I need you. {noformat} | ||||||
| Comments: | By: Friendly Automation (friendly-automation) 2018-06-30 12:04:36.934-0500 Change 9310 merged by Jenkins2: AMI SendText action: Fix to use correct thread to send the text. [https://gerrit.asterisk.org/9310|https://gerrit.asterisk.org/9310] By: Friendly Automation (friendly-automation) 2018-07-02 05:48:12.137-0500 Change 9309 merged by Joshua Colp: AMI SendText action: Fix to use correct thread to send the text. [https://gerrit.asterisk.org/9309|https://gerrit.asterisk.org/9309] By: Friendly Automation (friendly-automation) 2018-07-02 05:48:18.351-0500 Change 9311 merged by Joshua Colp: AMI SendText action: Fix to use correct thread to send the text. [https://gerrit.asterisk.org/9311|https://gerrit.asterisk.org/9311] | ||||||